# CarmenSandiegoCOL

./: .ninja_deps  .ninja_log  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  build.ninja.tmp6c625  carmen_sandiego.db  cmake_install.cmake.tmpd122a  contenido_proyecto.txt  estructura.txt  fixer.py  lector.py  print_directory_tree.py  torquemada.py
.cmake/api/v1/reply/: cache-v2-6ade88afea3dac0a5b60.json  cmakeFiles-v1-5960018119144a825fce.json  codemodel-v2-84e93c0c6f49cfa52fe8.json  index-2024-10-17T18-11-50-0765.json  target-CarmenSandiego-Debug-0902410e724609e95410.json  target-new_target-Debug-23bfc7cded900e7ca501.json  toolchains-v1-0fe24d3b27174199f74f.json
Multimedia/: MultimediaHandler.cpp
config/: app_config.hpp
core/: LocalidadDAO.hpp  MultimediaHandler.hpp  PistaDAO.cpp  SecuazDAO.cpp  SecuazDAO.hpp  database.hpp  game_controller.cpp  game_controller.hpp  game_service.cpp  game_service.hpp
dao/: BaseDAO.hpp  BaseDao.cpp  LocalidadDAO.cpp  LocalidadDAO.hpp  MisionDAO.cpp  MisionDAO.hpp  PartidaDAO.cpp  PartidaDAO.hpp  PistaDAO.hpp  SecuazDAO.cpp  SecuazDAO.hpp  UsuarioDAO.cpp  UsuarioDAO.hpp  database_initialization.cpp  database_initialization.hpp
include/: CarmenSandiegoApp.hpp  DatabaseHandler.hpp  game_logic.hpp  ui.cpp
misc/: CMakeCXXCompilerId.cpp
models/: Localidad.cpp  Localidad.hpp  Mision.cpp  Mision.hpp  Partida.cpp  Partida.hpp  Pista.cpp  Pista.hpp  Secuaz.cpp  Secuaz.hpp  Usuario.cpp  Usuario.hpp
src/: CarmenSandiegoApp.cpp  DatabaseHandler.cpp  Usuario.cpp  Usuario.hpp  database.cpp  database.hpp  game_logic.cpp  main.cpp  main_presentacion.ppc  multimedia.cpp  multimedia.hpp  ui.cpp  ui.hpp
src/app/: WelcomeWindow.cpp  WelcomeWindow.hpp  main.cpp
src/core/: game_controller.cpp  game_controller.hpp  game_logic.cpp  game_logic.hpp
tts/: TTSConfig.cpp  TTSConfig.hpp  TTSManager.cpp  TTSManager.hpp
ui/: game_window.cpp  game_window.hpp  main_window.cpp  main_window.hpp  presentation_window.cpp  presentation_window.hpp  registration_window.cpp  registration_window.hpp  result_window.cpp  result_window.hpp
